# EquipmentCpe

./: .env.example  .mypy.ini  .ruff.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/equipment_cpe/: app.py  celery_app.py  config.py
src/equipment_cpe/service_a/: domain.py  exceptions.py  models.py  routes.py
src/equipment_cpe/service_b/: models.py  routes.py  tasks.py
