[project]
name = "equipment_cpe"
version = "0.1.0"
description = "Services for async equipment settings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "fastapi>=0.115.14",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "celery-types>=0.23.0",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
